--- a/force-app/main/default/classes/SampleDeployClass.cls
+++ b/force-app/main/default/classes/SampleDeployClass.cls
@@ -7,6 +7,7 @@ public class SampleDeployClass {
         Account acc = new Account(Name= 'fred');
         insert acc; // hit the trigger
 
+        // Check that the trigger properly set the phone field:
         Account retAcc = [select id, phone from Account where id=:acc.id][0];
         System.assertEquals(getPhone(), retAcc.phone);
     }
