--- a/force-app/classes/SampleDeployClass.cls
+++ b/force-app/classes/SampleDeployClass.cls
@@ -5,7 +5,7 @@ public class SampleDeployClass {
         helloMethod();
 
         Account acc = new Account(Name= 'fred');
-        insert acc; // hit the 
+        insert acc; // hit the trigger 
 
         // Check that the trigger properly set the phone field:
         Account retAcc = [select id, phone from Account where id=:acc.id][0];
