--- a/force-app/main/default/classes/SampleDeployClass.cls
+++ b/force-app/main/default/classes/SampleDeployClass.cls
@@ -5,7 +5,8 @@ public class SampleDeployClass {
         helloMethod();
 
         Account acc = new Account(Name= 'fred');
-        insert acc; // hit the 
+        insert acc; // hit the tigger
+        
         // Check that the trigger properly set the phone field:
         Account retAcc = [select id, phone from Account where id=:acc.id][0];
         System.assertEquals(getPhone(), retAcc.phone);
